Рефакторинг кода, изменил вёрстку

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,24 @@
 body {
-    background-color: darkgray;
+    background-color: white;
+    font-family: Roboto,sans-serif;
+    font-weight: 300;
+}
+
+.btn-primary {
+    color: white;
+}
+
+.selectpicker {
+
+}
+
+.selectpicker~.btn {
+    /*padding: 10px 15px;*/
+    margin: 0;
+    text-transform:none;
+    background-color: white !important;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+.selectpicker~.dropdown-menu {
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5) ;
 }
