Добавил lombok, произвёл рефакторинг кода

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,23 +7,21 @@ body {
     padding: 10px 10px 0;
     border-radius: 2px;
 }
+
 .discDiv {
     background-color: #edeab2;
     margin-top: 25px;
 }
+
 .typeDiv {
     background-color: #ced6d3;
 }
+
 .paramDiv {
     margin-bottom: 10px;
     padding-bottom: 10px;
     background-color: #9fa6a3;
 }
-
-/*.addType, .addType:hover, .addType:focus,
-.addParam, .addParam:hover, .addParam:focus{
-    background-color:white !important;
-}*/
 
 .custom-file-input ~ .custom-file-label::after {
     content: "Выбрать";
@@ -45,9 +43,11 @@ nav {
     margin-bottom: 15px;
     text-align: center;
 }
+
 .dropdown-menu {
-    box-shadow: 0 0 3px 3px rgba(0,0,0,0.1);
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.1);
 }
+
 /*.dropdown-item {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -86,6 +86,7 @@ nav {
 .custom-control-label {
     cursor: pointer;
 }
+
 .custom-control-label::before, .custom-control-label::after {
     width: 25px;
     height: 25px;
@@ -98,19 +99,24 @@ nav {
     height: 38px !important;
     line-height: 38px !important;
 }
+
 .select2-selection__rendered {
     padding: 0 11px !important;
 }
+
 .select2-results__options {
     padding: 0 5px 5px 5px !important;
 }
+
 .select2-selection:focus {
     border-color: #80bdff;
-    box-shadow: 0 0 0 3px rgba(0,123,255,0.3);
+    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.3);
 }
+
 .select2-selection:hover {
     background-color: aliceblue;
 }
+
 .select2-dropdown {
-    box-shadow: 0 0 50px rgba(0,0,0,0.7);
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.7);
 }
